vendor/fixed-macro/tests/compile-fail/not-a-number.rs
fn main() {
    fixed_macro::fixed!("ok": I0F128);
}
